feat(auth): 集成 xxl-sso 单点登录- 移除自定义 Permission 注解，使用 XxlSso 注解替代 - 重构登录逻辑，使用 xxl-sso 提供的登录验证功能 - 更新用户相关操作，通过 xxl-sso 获取登录信息 - 优化权限控制，基于角色进行权限验证